# backend/controllers/tasks_controller.go
@@ -162,7 +162,7 @@ func GetTask(ctx *gin.Context) {
 //	@Failure	400	{object}	models.HTTPError
 //	@Failure	401	{object}	models.HTTPError
 //	@Failure	500	{object}	models.HTTPError
-//	@Router		/v1/tasks [post]
+//	@Router		/v1/tasks/new [post]
 func CreateTask(ctx *gin.Context) {
 	// Get user ID from sessions
 	session := sessions.Default(ctx)
